monticore-grammar/src/test/resources/de/monticore/grammar/cocos/invalid/A4030/A4030.mc4
/* (c) https://github.com/MontiCore/monticore */

package  de.monticore.grammar.cocos.invalid.A4030;

grammar A4030 {
  A;

  abstract B extends A astextends C;

}
